--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ cachetools==4.2.2
 certifi==2020.12.5
 chardet==4.0.0
 click==8.0.1
+dnspython==2.1.0
 Flask==2.0.1
 flatbuffers==1.12
 gast==0.4.0
@@ -27,6 +28,7 @@ opt-einsum==3.3.0
 protobuf==3.17.3
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
+pymongo==3.11.4
 python-dotenv==0.17.1
 requests==2.25.1
 requests-oauthlib==1.3.0
