--- a/example.env
+++ b/example.env
@@ -1,11 +1,13 @@
 TOKEN = "your token here"
-room = "name of your github chatroom"
+ROOM = "name of your github chatroom eg. LeaopardLabs/Gitter-ChatBot"
 CHATBOT_NAME = "github username of your chatbot account"
 
-ABOUT_COMMUNITY = "The SCoRe Lab has conducted research covering various aspects of sensor networks, embeded systems, digital forensic, information security, mobile applications, cloud, blockchain and software tools. The goal of our research is to generate computing solutions through identifying low cost methodologies and strategies that lead to sustainability."
-COMMUNITY_WEBSITE = "https://scorelab.org/"
-COMMUNITY_GITHUB = "https://github.com/scorelab"
+ORGANIZATION_GITHUB_NAME = "eg. scorelab"
+ABOUT_COMMUNITY = "A short description about your organization"
+COMMUNITY_WEBSITE = "Website link for your organization"
+COMMUNITY_GITHUB = "Github link of your organisation"
+COMMUNITY_MAILING_LIST = "Put a link to your organization's mailing list here"
 
-DB_NAME = "db name here"
-COLLECTION_NAME = "collection name"
-CONNECTION_STRING = "connection string"
+DB_NAME = "MongoDB Atlas database name here"
+COLLECTION_NAME = "MongoDB Atlas collection name"
+CONNECTION_STRING = "Database connection string"
